# android-hello-graphics-egl-gles

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/victorkrogh/helloandroidgraphics/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  helloandroidgraphics.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/victorkrogh/helloandroidgraphics/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
